--- a/tes.html
+++ b/tes.html
@@ -4,10 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistem Informasi Pendataan Kedai Kopi - Tanjungpinang</title>
+    <title>SIDAKO - Sistem Informasi Pendataan Kedai Kopi</title>
+    <link rel="icon" type="image/png" href="{{ asset('images/logo.png') }}">
+    <link rel="shortcut icon" href="{{ asset('images/logo.png') }}">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.js"></script>
     <style>
@@ -69,6 +72,22 @@
             position: relative;
         }
 
+        .form-header .logo-container {
+            margin-bottom: 1.5rem;
+        }
+
+        .form-header .logo-container img {
+            width: 100px;
+            height: 100px;
+            object-fit: contain;
+            filter: drop-shadow(0 4px 8px rgba(90, 62, 41, 0.3));
+            transition: transform 0.3s ease;
+        }
+
+        .form-header .logo-container img:hover {
+            transform: scale(1.05);
+        }
+
         .form-header::after {
             content: '';
             position: absolute;
@@ -83,10 +102,28 @@
 
         .form-title {
             color: var(--coffee-dark);
-            font-size: 2.5rem;
-            font-weight: 700;
-            margin-bottom: 0.5rem;
+            margin: 0 0 1rem 0;
+            text-align: center;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .form-title .app-name {
+            color: var(--coffee-green);
+            font-size: 3.5rem;
+            font-weight: 800;
+            letter-spacing: 3px;
+            display: block;
+            line-height: 1;
+            margin-bottom: 0.5rem;
+        }
+
+        .form-title .app-description {
+            color: var(--coffee-medium);
+            font-size: 1.2rem;
+            font-weight: 500;
+            letter-spacing: 1px;
+            line-height: 1.3;
+            display: block;
         }
 
         .form-subtitle {
@@ -263,8 +300,18 @@
         }
 
         @media (max-width: 768px) {
-            .form-title {
-                font-size: 2rem;
+            .form-title .app-name {
+                font-size: 2.8rem;
+                letter-spacing: 2px;
+            }
+
+            .form-title .app-description {
+                font-size: 1rem;
+            }
+
+            .form-header .logo-container img {
+                width: 80px;
+                height: 80px;
             }
 
             .form-block {
@@ -570,8 +617,12 @@
 <body>
     <div class="container">
         <div class="form-header">
+            <div class="logo-container">
+                <img src="{{ asset('images/logo.png') }}" alt="SIDAKO Logo" onerror="this.style.display='none'">
+            </div>
             <h1 class="form-title">
-                <i class="fas fa-coffee"></i> Sistem Informasi Pendataan Kedai Kopi
+                <span class="app-name">SIDAKO</span>
+                <span class="app-description">Sistem Informasi Pendataan Kedai Kopi</span>
             </h1>
             <p class="form-subtitle">Kota Tanjungpinang - Provinsi Kepulauan Riau</p>
         </div>
