--- a/pengolahan_wilkerstat_25_2172.html
+++ b/pengolahan_wilkerstat_25_2172.html
@@ -584,6 +584,23 @@
                     <polyline points="7 7 17 7 17 17"></polyline>
                 </svg>
             </a>
+
+                        <a href="https://drive.google.com/drive/folders/1fkQ8XPfOYofw_SfqYZWYHOeiPvC2qVyA" 
+               target="_blank" 
+               class="link-item link-material">
+                <svg class="link-icon" viewBox="0 0 24 24" fill="none" stroke="#FFD700" stroke-width="2.5">
+                    <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                    <polyline points="14 2 14 8 20 8"></polyline>
+                    <line x1="16" y1="13" x2="8" y2="13"></line>
+                    <line x1="16" y1="17" x2="8" y2="17"></line>
+                    <polyline points="10 9 9 9 8 9"></polyline>
+                </svg>
+                <span class="link-text">All In One</span>
+                <svg class="link-arrow" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
+                    <line x1="7" y1="17" x2="17" y2="7"></line>
+                    <polyline points="7 7 17 7 17 17"></polyline>
+                </svg>
+            </a>
             
             <a href="https://docs.google.com/document/d/1aqmtaalKkywogpNnfIOJEMxU7CjRuoXm/edit?usp=sharing&ouid=110894892942901861238&rtpof=true&sd=true" 
                target="_blank" 
