--- a/pengolahan_wilkerstat_25_2172.html
+++ b/pengolahan_wilkerstat_25_2172.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Link Hub - BPS Kota Tanjungpinang</title>
+    <title>Link Wilkerstat</title>
     <link rel="icon" href="images/logo.png" type="image/png"> 
     <style>
         * {
