--- a/c1ontoh-halaman.html
+++ b/c1ontoh-halaman.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linktree BPS 1 Tanjungpinang</title>
+    <title>Linktree BPS Tanjungpinang</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -52,7 +52,7 @@
         <h1>🏢 BPS Kota Tanjungpinang</h1>
         <a href="https://tanjungpinangkota.bps.go.id" class="link">🌐 Website Resmi</a>
         <a href="#" class="link">📊 Data Statistik</a>
-        <a href="#" class="link">📝 Publikasi</a>
+        <a href="#" class="link">📝 Publikasi231123123</a>
         <a href="#" class="link">📞 Kontak Kami</a>
     </div>
 </body>
