Update linktree page: BPS Kota Tanjungpinang

--- a/bps-tanjungpinang.html
+++ b/bps-tanjungpinang.html
@@ -14,7 +14,7 @@
 
         body {
             font-family: 'Inter', system-ui, -apple-system, sans-serif;
-            background: linear-gradient(135deg, #ff00c8 0%, #1d4e5f 100%);
+            background: linear-gradient(135deg, #002366 0%, #1d4e5f 100%);
             min-height: 100vh;
             display: flex;
             justify-content: center;
@@ -43,7 +43,7 @@
             left: 0;
             right: 0;
             height: 4px;
-            background: linear-gradient(90deg, #ffd700, #ff00c8, #ffd700);
+            background: linear-gradient(90deg, #ffd700, #002366, #ffd700);
         }
 
         @keyframes fadeInUp {
@@ -164,7 +164,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="https://tanjungpinangkota.bps.go.id/images/logo_bps.png" alt="Logo BPS" onerror="this.style.display='none'">
+            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjBTTL-G6UTLmAo8oRi4G-NQs5a1_Tw845evaoPBBeu5A1lQx4LDXKXBvcRFKVtGqSqjv8LuwG1YcaDy3aiEqetz41R5B1OVJ7Tb4PbTQ3Eqs7jSH2snAQlYkNHQsiOUxkqXTLvTWsk2BP86zpMTzu7xz8sxVAoExePY-Lm5RIhoAQdKIDCPyfgTIFm/s320/GKL3_Badan%20Pusat%20Statistik%20(BPS)%20-%20Koleksilogo.com.jpg" alt="Logo BPS" onerror="this.style.display='none'">
         </div>
         <h1>BPS Kota Tanjungpinang</h1>
         <p class="description">Badan Pusat Statistik Kota Tanjungpinang</p>
@@ -172,8 +172,8 @@
             <a href="https://tanjungpinangkota.bps.go.id" class="link-button" target="_blank" rel="noopener noreferrer">🌐 Website Resmi</a>            <a href="https://tanjungpinangkota.bps.go.id/subject.html" class="link-button" target="_blank" rel="noopener noreferrer">📊 Data Statistik</a>            <a href="https://tanjungpinangkota.bps.go.id/publication.html" class="link-button" target="_blank" rel="noopener noreferrer">📝 Publikasi</a>
         </div>
         <div class="footer">
-            © 2024 BPS Kota Tanjungpinang<br>
-            <em>Dibuat dengan Taut Maker BPS</em>
+            © 2025 BPS Kota Tanjungpinang<br>
+            <em>Dibuat dengan Tautpinang</em>
         </div>
     </div>
 </body>
