--- a/bps-tanjungpinang.html
+++ b/bps-tanjungpinang.html
@@ -23,7 +23,7 @@
 
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: linear-gradient(135deg, rgba(0, 35, 102, 1), rgba(29, 78, 95, 1));
+            background: linear-gradient(135deg, rgba(255, 182, 193, 1), rgba(255, 105, 180, 1));
             min-height: 100vh;
             display: flex;
             justify-content: center;
@@ -35,11 +35,77 @@
         }
 
 
+        body::before,
+        body::after {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 2;
+            pointer-events: none;
+        }
+
+        body::before {
+            background:
+                radial-gradient(circle 20px at 15% 25%, rgba(255, 182, 193, 0.2) 0%, transparent 60%),
+                radial-gradient(circle 16px at 85% 15%, rgba(255, 105, 180, 0.2) 0%, transparent 60%),
+                radial-gradient(circle 26px at 65% 75%, rgba(199, 21, 133, 0.15) 0%, transparent 60%),
+                radial-gradient(circle 12px at 25% 85%, rgba(255, 182, 193, 0.2) 0%, transparent 60%),
+                radial-gradient(circle 22px at 90% 60%, rgba(255, 105, 180, 0.2) 0%, transparent 60%);
+            opacity: 0.5;
+            animation: particleFloat1 3s ease-in-out infinite;
+            filter: blur(2px);
+        }
+
+        body::after {
+            background:
+                radial-gradient(circle 18px at 45% 65%, rgba(199, 21, 133, 0.15) 0%, transparent 60%),
+                radial-gradient(circle 24px at 5% 45%, rgba(255, 182, 193, 0.2) 0%, transparent 60%),
+                radial-gradient(circle 14px at 95% 35%, rgba(255, 105, 180, 0.2) 0%, transparent 60%),
+                radial-gradient(circle 20px at 75% 5%, rgba(199, 21, 133, 0.15) 0%, transparent 60%),
+                radial-gradient(circle 16px at 35% 95%, rgba(255, 182, 193, 0.2) 0%, transparent 60%);
+            opacity: 0.4;
+            animation: particleFloat2 4.2s ease-in-out infinite;
+            animation-delay: 1.2s;
+            filter: blur(3px);
+        }
+
+        @keyframes particleFloat1 {
+            0%, 100% {
+                transform: translateY(0px) translateX(0px) scale(1);
+            }
+            25% {
+                transform: translateY(-20px) translateX(15px) scale(1.1);
+            }
+            50% {
+                transform: translateY(-35px) translateX(25px) scale(0.9);
+            }
+            75% {
+                transform: translateY(-15px) translateX(10px) scale(1.05);
+            }
+        }
+
+        @keyframes particleFloat2 {
+            0%, 100% {
+                transform: translateY(0px) translateX(0px) scale(1);
+            }
+            25% {
+                transform: translateY(25px) translateX(-10px) scale(0.95);
+            }
+            50% {
+                transform: translateY(40px) translateX(-20px) scale(1.1);
+            }
+            75% {
+                transform: translateY(15px) translateX(-5px) scale(1.02);
+            }
+        }
 
         .container {
-            background: rgba(255, 255, 255, 0.95);
+            background: rgba(255, 255, 255, 0.9);
             backdrop-filter: blur(20px);
-            border-radius: 24px;
+            border-radius: 28px;
             padding: 30px 25px;
             box-shadow: 0 20px 40px rgba(0,0,0,0.1);
             text-align: center;
@@ -58,7 +124,7 @@
             left: 0;
             right: 0;
             height: 4px;
-            background: linear-gradient(90deg, rgba(255, 215, 0, 1), rgba(0, 35, 102, 1));
+            background: linear-gradient(90deg, rgba(255, 182, 193, 1), rgba(255, 105, 180, 1));
         }
 
         @keyframes fadeInUp {
@@ -83,7 +149,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            border: 3px solid rgba(255, 215, 0, 1);
+            border: 3px solid rgba(255, 182, 193, 1);
         }
 
         .logo img {
@@ -95,7 +161,7 @@
         .title {
             font-size: 26px;
             font-weight: 700;
-            color: rgba(0, 35, 102, 1);
+            color: rgba(199, 21, 133, 1);
             margin-bottom: 8px;
             line-height: 1.3;
         }
@@ -117,12 +183,12 @@
             display: block;
             padding: 16px 20px;
             background: rgba(255, 255, 255, 1);
-            color: rgba(0, 35, 102, 1);
+            color: rgba(199, 21, 133, 1);
             text-decoration: none;
-            border-radius: 12px;
+            border-radius: 16px;
             font-weight: 600;
             font-size: 15px;
-            border: 2px solid rgba(234, 234, 234, 1);
+            border: 2px solid rgba(255, 182, 193, 1);
             transition: all 0.3s ease;
             position: relative;
             overflow: hidden;
@@ -130,10 +196,10 @@
 
         .link-button:hover {
             transform: translateY(-2px);
-            background: linear-gradient(135deg, rgba(255, 215, 0, 1), rgba(255, 255, 255, 1));
-            color: rgba(0, 35, 102, 1);
-            border: 2px solid rgba(255, 215, 0, 1);
-            box-shadow: 0 0 30px rgba(255, 215, 0, 0.3);
+            background: linear-gradient(135deg, rgba(255, 182, 193, 1), rgba(255, 255, 255, 1));
+            color: rgba(199, 21, 133, 1);
+            border: 2px solid rgba(255, 105, 180, 1);
+            box-shadow: 0 0 30px rgba(255, 182, 193, 0.4);
         }
 
         .footer {
@@ -179,7 +245,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="http://127.0.0.1:8000/img/logo-bps.png" alt="Logo BPS" onerror="this.style.display='none'">
+            <img src="https://i.pinimg.com/474x/e4/8a/b2/e48ab2e2e8055f15f04caf6968c1314a.jpg" alt="Logo BPS" onerror="this.style.display='none'">
         </div>
         <h1 class="title">BPS Kota Tanjungpinang</h1>
         <p class="description">Badan Pusat Statistik Kota Tanjungpinang - Satu Data Untuk Semua</p>
